infra/k8s/05-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medflow-api
  namespace: medflow
  labels:
    app: medflow-api
    app.kubernetes.io/component: backend-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: medflow-api
  template:
    metadata:
      labels:
        app: medflow-api
    spec:
      containers:
      - name: api
        image: medicore360/api:v1.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
          name: http
        livenessProbe:
          httpGet:
            path: /health
            port: 4000
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ready
            port: 4000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 2
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: medflow-api-service
  namespace: medflow
  labels:
    app: medflow-api
spec:
  type: ClusterIP
  ports:
  - port: 4000
    targetPort: 4000
    name: http
  selector:
    app: medflow-api
