infra/k8s/06-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medflow-web
  namespace: medflow
  labels:
    app: medflow-web
    app.kubernetes.io/component: frontend-web
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: medflow-web
  template:
    metadata:
      labels:
        app: medflow-web
    spec:
      containers:
      - name: web
        image: medicore360/web:v1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
          name: http
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 2
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: medflow-web-service
  namespace: medflow
  labels:
    app: medflow-web
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  selector:
    app: medflow-web
