infra/k8s/09-rabbitmq.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: medflow
  labels:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/component: messaging
spec:
  serviceName: rabbitmq
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.12-management-alpine
          ports:
            - name: amqp
              containerPort: 5672
            - name: http-mgmt
              containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: medflow
spec:
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: http-mgmt
      port: 15672
      targetPort: 15672
  selector:
    app.kubernetes.io/name: rabbitmq
